      instead giving up immediately. (CNY-1814)

  o Bug Fixes:
    * The SQLite "ANALYZE" command is no longer run on local SQLite
      databases.  Any data stored by the "ANALYZE" command will be
      removed from the local database unless it is being accessed
      read-only.  Database performance is poor on databases with
      "ANALYZE" data in them. (CNY-778)

Changes in 1.1.32:
  o Client Changes:
    * A getDownloadSizes() method has been added to the ConaryClient
      object to determine the over-the-wire transfer size of the jobs
      in an UpdateJob object.  Call requires a single repository be
      the source of the entire update. (CNY-1757)

  o Server Changes:
    * A "infoOnly" parameter to has been added to the getChangeSet()
      repository method in protocol version 51. (CNY-1757)
    * The list of repository methods is now automatically generated
      instead of statically listed. (CNY-1781)
  
  o Bug Fixes:
    * The addSvnSnapshot() source action now uses the lookaside directory
      for generating the snapshot, instead of using the remote repository.
      (CNY-1777)
    * A bug that prevented unused entries in the Versions table of the
      system Conary database from being cleaned up after erasures has
      been fixed.
    * A bug that caused changes in the byDefault status of a trove to
      be omitted from local rollbacks has been fixed. (CNY-1796)

Changes in 1.1.31.1:
  o Bug Fix:
    * Proxies used wrong getChangeSet call for old protocol versions (CNY-1803)

Changes in 1.1.31:
  o Bug Fix:
    * A bug that caused an Internal Server Error when a Conary proxy
      attempted to convert a changeset for an older client when the
      upstream Conary repository was not running 1.1.29 or later has
      been fixed. (CNY-1792)

Changes in 1.1.30:
  o Bug Fixes:
    * The version cache for upstream servers in the Conary proxy
      incorrectly included user information in the URL, causing